Fix pagination and improve the code method Ref: #main
